[gd_scene load_steps=4 format=3 uid="uid://kf8tcogy2w07"]

[ext_resource type="Script" uid="uid://ltx2w5l1itk1" path="res://Levels/MainMenu/main_menu.gd" id="1_g6pvw"]
[ext_resource type="PackedScene" uid="uid://dwk14x0nx2c3o" path="res://Levels/MainMenu/SceneTransition.tscn" id="2_mp53d"]
[ext_resource type="FontFile" uid="uid://b2x0u6lilgwm3" path="res://Assets/ThaleahFat.ttf" id="3_h15vq"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6pvw")

[node name="SceneTransition" parent="." instance=ExtResource("2_mp53d")]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.333333, 0.266667, 0.4, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("3_h15vq")
theme_override_font_sizes/font_size = 200
text = "Sisyphus
Orchestra"
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_h15vq")
theme_override_font_sizes/font_size = 50
text = "> "

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_h15vq")
theme_override_font_sizes/font_size = 50
text = "Start game"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_h15vq")
theme_override_font_sizes/font_size = 50
text = "> "

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_h15vq")
theme_override_font_sizes/font_size = 50
text = "Controls"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_h15vq")
theme_override_font_sizes/font_size = 50
text = "> "

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_h15vq")
theme_override_font_sizes/font_size = 50
text = "Exit"
